--- a/app/src/main/res/drawable/gradin.xml
+++ b/app/src/main/res/drawable/gradin.xml
@@ -3,6 +3,7 @@
     <item>
     <shape
         android:shape="rectangle">
+        <corners android:bottomLeftRadius="30dip"  android:bottomRightRadius="30dip"/>
         <gradient
             android:startColor="#F0473C"
             android:endColor="#EC5C3D">
